--- a/effect/package.json
+++ b/effect/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.13.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
